[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ampersand-candidate-tracker"
version = "1.0.0"
description = "Production candidate tracking system"
authors = [{name = "Ampersand", email = "contact@example.com"}]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "supabase>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "prefect>=2.14.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "airtable-python-wrapper>=0.15.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
